# MCSchematic-To-Commands

./: .replit  ordertesting.schem  pyproject.toml  schematictocommand.py  test1.schem  test2.schem  test4.schem
