[tool.poetry]
name = "repl-nix-mcschematic-to-commands"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_mcschematic_to_commands"}]

[tool.poetry.dependencies]
python = "^3.10"
nbtlib = "^2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
